--- a/www/www/templates/failure.html
+++ b/www/www/templates/failure.html
@@ -2,45 +2,47 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>{{ title }}: <a href="https://jira.mongodb.org/browse/{{failed_bf["test"]["issue"]}}">{{failed_bf["test"]["issue"]}}</a><br /></h2>
+<h3>{{failed_bf["test"]["summary"]}}</h3>
 
-    <a href="https://evergreen.mongodb.com/task/{{failed_test["test"]["task_id"]}}">Task Page</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{failed_test["test"]["log_url"]}}">Raw Log File</a><br/>
-    {% if failed_test["summary"]["faults"] %}
-        {% for fault_info in failed_test["summary"]["faults"] %}
+    <a href="{{failed_bf["test"]["task_url"]}}">Task Page</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{failed_bf["test"]["log_file_url"]}}">Test or Task Raw Log File</a><br/>
+    <a href="{{failed_bf["test"]["task_log_file_url"]}}">Task Raw Log File</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{failed_bf["test"]["system_log_url"]}}">Task System Raw Log File</a><br />
+    {% if failed_bf["summary"]["faults"] %}
+        {% for fault_info in failed_bf["summary"]["faults"] %}
             <b>Faults</b><br/>
             <b>Category: {{fault_info["category"] }}</b><br />
-            <b>Source:</b>{{fault_info["source"]}}<br />
-            <b>Log Lines:</b> <a href="{{failed_test["test"]["log_url"]|tohtml_logurl}}#L{{fault_info["line_number"]}}">Log File Fault</a><pre>{{fault_info["context"]}}</pre><br />
+            <b>Source: </b>{{fault_info["source"]}}<br />
+            <b>Log Lines: </b> <a href="{{failed_bf["test"]["log_file_url"]|tohtml_logurl}}#L{{fault_info["line_number"]}}">Log File Fault</a><pre>{{fault_info["context"]}}</pre><br />
             <br/>
         {% endfor %}
     {% else  %}
-    <b>TODO: add support for analyzing this failure</b><pre>python analyzer\log_file_analyzer.py {{failed_test["test"]["cache"]}}\test.log</pre><br/>
+    <b>TODO: add support for analyzing this failure</b><pre>python analyzer/log_file_analyzer.py {{failed_bf["test"]["cache"]}}\test.log</pre><br/>
     {% endif %}
-    {% if failed_test["summary"]["contexts"] %}
+    {% if failed_bf["summary"]["contexts"] %}
         <b>Additional Context</b><br />
-        {% for context_info in failed_test["summary"]["contexts"] %}
+        {% for context_info in failed_bf["summary"]["contexts"] %}
             <b>Category: {{context_info["category"] }}</b><br />
-            <b>Source:</b>{{context_info["source"]}}<br />
-            <b>Log Lines:</b><pre>{{context_info["context"]}}</pre><br />
+            <b>Source: </b>{{context_info["source"]}}<br />
+            <b>Log Lines: </b><pre>{{context_info["context"]}}</pre><br />
         {% endfor %}
     <b>Contexts???</b>
     {% else  %}
-    <b>TODO: add support for adding context to this failure</b><pre>python analyzer\log_file_analyzer.py {{failed_test["test"]["cache"]}}\test.log</pre><br />
+    <b>TODO: add support for adding context to this failure</b><pre>python analyzer/log_file_analyzer.py {{failed_bf["test"]["cache"]}}\test.log</pre><br />
     {% endif %}
 
-<h3>Jira Details</h3>
-
+<h3>Related build failure and server issues from Jira</h3>
+<h4>Query: {{jira_query}}</h4>
         {% for issue in issues %}
 
     <div class="buildbaron-issue">
         {% if issue.fields.status.name == "Closed" or issue.fields.status.name == "Resolved" %}
         <div class="buildbaron-row">
-            {% else %}
+        {% else %}
             <div class="buildbaron-row buildbaron-row-highlight">
-                {% endif %}
+        {% endif %}
 
                 <span class="buildbaron-issue-summary">
+
                     <a href="https://jira.mongodb.org/browse/{{issue.key}}">
                         {{issue.key}}: {{issue.fields.summary}}
                     </a>
@@ -64,10 +66,61 @@
                 </div>
                 <div class="buildbaron-issue-detail buildbaron-issue-detail-right">
                     Assignee: {{issue.fields.assignee.displayName}}
+                    <div id="close_dup">
+                        <a class="btn btn-danger" href="close_duplicate?issue={{failed_bf["test"]["issue"]}}&duplicate_issue={{issue.key}}">Close As Duplicate</a>
+                    </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
         {% endfor %}
 
+<h3>Recent build failure and server issues current user has looked at in jira </h3>
+<h4>Query: {{recent_issues_query}}</h4>
+{% for issue in recent_issues %}
 
-{% endblock %}
+        <div class="buildbaron-issue">
+            {% if issue.fields.status.name == "Closed" or issue.fields.status.name == "Resolved" %}
+            <div class="buildbaron-row">
+                {% else %}
+                <div class="buildbaron-row buildbaron-row-highlight">
+                    {% endif %}
+
+                    <span class="buildbaron-issue-summary">
+
+                        <a href="https://jira.mongodb.org/browse/{{issue.key}}">
+                            {{issue.key}}: {{issue.fields.summary}}
+                        </a>
+                    </span>
+                    {% if issue.fields.status.name == "Closed" or issue.fields.status.name == "Resolved" %}
+                    <span class="buildbaron-issue-status">
+                        {{issue.fields.status.name}}: {{issue.fields.resolution.name}}
+                    </span>
+                    {% else %}
+                    <span class="buildbaron-issue-status">
+                        {{issue.fields.status.name}}
+                    </span>
+                    {% endif %}
+                </div>
+                <div class="buildbaron-row">
+                    <div class="buildbaron-issue-detail buildbaron-issue-detail-left">
+                        Created: {{issue.fields.created | date}}
+                    </div>
+                    <div class="buildbaron-issue-detail buildbaron-issue-detail-middle">
+                        Update: {{issue.fields.updated | date}}
+                    </div>
+                    <div class="buildbaron-issue-detail buildbaron-issue-detail-right">
+                        Assignee: {{issue.fields.assignee.displayName}}
+                        <div id="close_dup">
+                            <a class="btn btn-danger" href="close_duplicate?issue={{failed_bf["test"]["issue"]}}&duplicate_issue={{issue.key}}">Close As Duplicate</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+
+            
+            <div id="close_gone">
+            If this is due to a transient machine issue: <a class="btn btn-danger" href="close_goneaway?issue={{failed_bf["test"]["issue"]}}">Close As Gone Away</a>
+            </div>
+
+            {% endblock %}
