--- a/www/www/static/content/site.css
+++ b/www/www/static/content/site.css
@@ -89,6 +89,11 @@ From https://github.com/evergreen-ci/build-baron-plugin/blob/master/static/css/t
   padding: 3px;
   clear: both;
   overflow: auto;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+}
+.buildbaron-row .col-md-4{
+  padding: 5px;
 }
 .buildbaron-row-highlight{
   background-color: #f9e2e2;
@@ -96,9 +101,68 @@ From https://github.com/evergreen-ci/build-baron-plugin/blob/master/static/css/t
 .buildbaron-row-reopened{
   background-color: #f9e2e2;
 }
+.buildbaron-close-btn {
+  padding: 1px 2px;
+  background: #ddd;
+}
+.buildbaron-jira-query {
+  white-space: nowrap;
+  line-height: 20px;
+  overflow: auto;
+}
 .buildbaron-time{
   margin-left: 5px;
   font-size: 13px;
   color: #646464;
   font-style: italic;
+}
+.buildbaron-noformat {
+  width: 100%;
+  overflow: auto;
+  max-height: 400px;
+  border: 1px dashed #ddd;
+  border-radius: 2px;
+  white-space: nowrap;
+  background: #fdfdfd;
+}
+.buildbaron-code-line-td {
+  padding: 0 !important;
+  margin: 0;
+}
+.buildbaron-noformat tr {
+  padding: 0;
+  margin: 0px 0px;
+}
+.code-line {
+  border: 0;
+  border-radius: 0;
+  background: inherit;
+  padding: 0px;
+  font-family: monospace;
+  white-space: pre;
+  margin: 0px 10px;
+}
+.buildbaron-noformat table tbody tr:first-child td pre {
+  margin-top: 10px;
+}
+.buildbaron-noformat table tbody tr:last-child td pre {
+  margin-bottom: 10px;
+}
+#buildbaron-related-failures {
+  height: 600px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin: 10px 0px;
+}
+#buildbaron-recently-viewed {
+  height: 600px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin: 10px 0px;
+}
+
+#close_dup {
+  padding: 5px;
 }
