--- a/www/www/static/content/site.css
+++ b/www/www/static/content/site.css
@@ -102,8 +102,10 @@ From https://github.com/evergreen-ci/build-baron-plugin/blob/master/static/css/t
   background-color: #f9e2e2;
 }
 .buildbaron-close-btn {
-  padding: 1px 2px;
-  background: #ddd;
+  padding: 2px 6px;
+  background: #69b241;
+  color: #fff;
+  border: 0px;
 }
 .buildbaron-jira-query {
   white-space: nowrap;
@@ -120,14 +122,65 @@ From https://github.com/evergreen-ci/build-baron-plugin/blob/master/static/css/t
   width: 100%;
   overflow: auto;
   max-height: 400px;
-  border: 1px dashed #ddd;
+  border: 1px dashed #bbb;
   border-radius: 2px;
   white-space: nowrap;
   background: #fdfdfd;
 }
+.buildbaron-noformat table {
+  width: 100%;
+}
 .buildbaron-code-line-td {
+  margin: 0;
+  padding: 0;
+  background: #f0f0f0;
+  font-size: 1em;
+}
+.buildbaron-code-line-td pre code {
   padding: 0 !important;
   margin: 0;
+}
+.buildbaron-code-line-td pre span {
+  padding: 0;
+  margin: 0;
+}
+.buildbaron-stack-frame {
+  margin: 15px 0px;
+  width: 100%;
+  overflow: auto;
+  border: 1px dashed #bbb;
+  border-radius: 5px;
+}
+.buildbaron-stack-frame table {
+  width: 100%;
+}
+.buildbaron-code-header {
+  padding: 5px 5px 0px 5px;
+  background: #f5f5f5;
+  font-weight: 400;
+  width: 100%;
+  border-bottom: 1px solid #bbb;
+}
+.buildbaron-code-line-num {
+  max-width: 2em;
+  padding: 0px 2px !important;
+  margin: 0;
+  border-right: 1px solid #bbb;
+}
+.buildbaron-code-highlighted-line {
+  background: #dadada;
+}
+.buildbaron-code-highlighted-line.buildbaron-code-line-num {
+  background: #6ce26c;
+}
+.buildbaron-stack-frame-row:first-child {
+  padding-top: 5px !important;
+}
+.buildbaron-stack-frame-row:last-child {
+  padding-bottom: 5px !important;
+}
+.buildbaron-stack-frame-row {
+  line-height: 12px;
 }
 .buildbaron-noformat tr {
   padding: 0;
@@ -142,11 +195,11 @@ From https://github.com/evergreen-ci/build-baron-plugin/blob/master/static/css/t
   white-space: pre;
   margin: 0px 10px;
 }
-.buildbaron-noformat table tbody tr:first-child td pre {
-  margin-top: 10px;
+.buildbaron-noformat table tbody tr:first-child td {
+  padding-top: 10px;
 }
-.buildbaron-noformat table tbody tr:last-child td pre {
-  margin-bottom: 10px;
+.buildbaron-noformat table tbody tr:last-child td {
+  padding-bottom: 10px;
 }
 #buildbaron-related-failures {
   height: 600px;
