--- a/www/www/templates/layout.html
+++ b/www/www/templates/layout.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="/static/content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/table/bootstrap-table.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
+    <link rel="stylesheet" type="text/css" href="/static/content/highlight/styles/default.css" />
     <script src="/static/scripts/modernizr-2.6.2.js"></script>
+    <script src="/static/content/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
 <body>
