--- a/www/www/templates/failure.html
+++ b/www/www/templates/failure.html
@@ -83,8 +83,8 @@
 
 <div class='col-md-5'>
   <div id='buildbaron-related-failures'>
-    <h3>Related build failure and server issues from Jira</h3>
-    <h4 class="buildbaron-jira-query">Query: {{jira_query}}</h4>
+    <h3>Related issues from JIRA</h3>
+    <h4 class="buildbaron-jira-query">Query: <text class="code-line">{{jira_query}}</text/></h4>
     {% for issue in issues %}
       <div class="buildbaron-issue">
         {% if issue.fields.status.name == "Closed" or issue.fields.status.name == "Resolved" %}
@@ -137,8 +137,8 @@
   </div>
 
   <div id="buildbaron-recently-viewed">
-    <h3>Recent build failure and server issues current user has looked at in jira </h3>
-    <h4 class="buildbaron-jira-query">Query: {{recent_issues_query}}</h4>
+    <h3>Recent JIRA tickets seen by user</h3>
+    <h4 class="buildbaron-jira-query">Query: <text class="code-line">{{recent_issues_query}}</text></h4>
     {% for issue in recent_issues %}
       <div class="buildbaron-issue">
         {% if issue.fields.status.name == "Closed" or issue.fields.status.name == "Resolved" %}
