--- a/www/www/templates/layout.html
+++ b/www/www/templates/layout.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/static/content/highlight/styles/default.css" />
     <script src="/static/scripts/modernizr-2.6.2.js"></script>
     <script src="/static/content/highlight/highlight.pack.js"></script>
+    <script src="/static/scripts/jquery-1.10.2.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
@@ -41,7 +42,6 @@
         </footer>
     </div>
 
-    <script src="/static/scripts/jquery-1.10.2.js"></script>
     <script src="/static/scripts/bootstrap.js"></script>
     <script src="/static/content/table/bootstrap-table.js"></script>
     <script src="/static/content/table/locale/bootstrap-table-en-US.min.js"></script>
